[package]
name = "ts_netmon"
version.workspace = true
description = "tailscale network interface monitor"
categories = ["network-programming"]
keywords = ["tailscale", "network", "monitor", "netmon"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if.workspace = true
flume.workspace = true
futures-util.workspace = true
ipnet.workspace = true
pin-project-lite = "0.2"
smallvec.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true

[dev-dependencies]
ts_cli_util.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
nix = "0.31"
socket2 = "0.6"
tokio = { workspace = true, features = ["net"] }

[lints]
workspace = true
